--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <h1>Redirecting...</h1>
-  <meta http-equiv="refresh" content="1; url=?">
+  <meta http-equiv="refresh" content="1; url=stage/index.html">
   <meta
 </body>
 </html>
