--- a/stage/index.html
+++ b/stage/index.html
@@ -6,10 +6,7 @@
 	<body>
 		<div class="reveal">
 			<section data-markdown=""  
-				 data-separator="^\n\n\n"  
-				 data-separator-vertical="^\n\n"  
-				 data-separator-notes="^Note:"  
-				 data-charset="iso-8859-15">
+				 data-separator="^\n\n\n">
 			</section>
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/js/reveal.min.js"></script>
@@ -27,7 +24,7 @@
 				const reveal = document.querySelector('.reveal section')
 				if (reveal) {
 					reveal.setAttribute('data-markdown', url);
-					Reveal.initialize();
+// 					Reveal.initialize();
 				}
 				
 			}
