--- a/stage/index.html
+++ b/stage/index.html
@@ -10,6 +10,8 @@
 			</section>
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/js/reveal.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/plugin/markdown/marked.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/plugin/markdown/markdown.js"></script>
 		<script>
 			const hashstr = window.location.search.substr(1);
 			const hasharr = hashstr.split('&')
@@ -24,7 +26,7 @@
 				const reveal = document.querySelector('.reveal section')
 				if (reveal) {
 					reveal.setAttribute('data-markdown', url);
-// 					Reveal.initialize();
+					Reveal.initialize();
 				}
 				
 			}
