--- a/stage/index.html
+++ b/stage/index.html
@@ -26,7 +26,13 @@
 				const reveal = document.querySelector('.reveal section')
 				if (reveal) {
 					reveal.setAttribute('data-markdown', url);
-					Reveal.initialize();
+					Reveal.initialize({
+						dependencies: [
+							// Interpret Markdown in <section> elements
+							{ src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+							{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+						]	
+					});
 				}
 				
 			}
