--- a/stage/index.html
+++ b/stage/index.html
@@ -14,31 +14,28 @@
 			</div>
 		</div>
 		
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.core.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/js/reveal.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/plugin/markdown/marked.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/plugin/markdown/markdown.js"></script>
 		<script>
-			const hashstr = window.location.search.substr(1);
-			const hasharr = hashstr.split('&')
-			const hashdict = hasharr.reduce((hash, arg) => {
-				const bits = arg.split('=')
-				hash[bits[0]] = bits[1]
-				return hash;
-			}, {});
-			const lecture = hashdict['lecture']
-			if (lecture) {
-				const url = `https://cdn.rawgit.com/mottaquikarim/JavaScriptDevelopmentRemote/8bc62aca/Lecture_${lecture}/README.md`	
-				const reveal = document.querySelector('.reveal section')
-				if (reveal) {
-					reveal.setAttribute('data-markdown', url);
-					Reveal.initialize({
-						dependencies: [
-							// Interpret Markdown in <section> elements
-							{ src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-							{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-						]	
-					});
+			head.ready(() => {
+				const hashstr = window.location.search.substr(1);
+				const hasharr = hashstr.split('&')
+				const hashdict = hasharr.reduce((hash, arg) => {
+					const bits = arg.split('=')
+					hash[bits[0]] = bits[1]
+					return hash;
+				}, {});
+				const lecture = hashdict['lecture']
+				if (lecture) {
+					const url = `https://cdn.rawgit.com/mottaquikarim/JavaScriptDevelopmentRemote/8bc62aca/Lecture_${lecture}/README.md`	
+					const reveal = document.querySelector('.reveal section')
+					if (reveal) {
+						reveal.setAttribute('data-markdown', url);
+						Reveal.initialize();
+					}
 				}
-			}
+			})
 		</script>
 	</body>
 </html>
