--- a/stage/index.html
+++ b/stage/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-markdown="" ></section>
+				<section data-markdown="" data-separator="^---"></section>
 			</div>
 		</div>
 		
