--- a/stage/index.html
+++ b/stage/index.html
@@ -13,10 +13,10 @@
 				<section data-markdown="" data-separator="^---"></section>
 			</div>
 		</div>
-		
+		<script src="https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/lib/js/head.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/js/reveal.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/plugin/markdown/marked.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/plugin/markdown/markdown.js"></script>
+<!-- 		<script src="https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/plugin/markdown/marked.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/plugin/markdown/markdown.js"></script> -->
 		<script>
 				const hashstr = window.location.search.substr(1);
 				const hasharr = hashstr.split('&')
@@ -31,7 +31,15 @@
 					const reveal = document.querySelector('.reveal section')
 					if (reveal) {
 						reveal.setAttribute('data-markdown', url);
-						Reveal.initialize();
+						Reveal.initialize({
+							dependencies: [
+								{ src: '../../lib/js/classList.js', condition: function() { return !document.body.classList; } },
+								{ src: 'marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					    			{ src: 'markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					    			{ src: '../highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+								{ src: '../notes/notes.js' }
+							]	
+						});
 					}
 				}
 		</script>
