--- a/stage/index.html
+++ b/stage/index.html
@@ -27,7 +27,7 @@
 				}, {});
 				const lecture = hashdict['lecture']
 				if (lecture) {
-					const url = 'http://testing.webscript.io/'; //`https://cdn.rawgit.com/mottaquikarim/JavaScriptDevelopmentRemote/8bc62aca/Lecture_${lecture}/README.md`	
+					const url = 'https://testing.webscript.io/'; //`https://cdn.rawgit.com/mottaquikarim/JavaScriptDevelopmentRemote/8bc62aca/Lecture_${lecture}/README.md`	
 					const reveal = document.querySelector('.reveal section')
 					if (reveal) {
 						reveal.setAttribute('data-markdown', url);
