--- a/stage/index.html
+++ b/stage/index.html
@@ -6,6 +6,7 @@
 
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/css/reveal.min.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/css/theme/white.css">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@9.12.0/styles/monokai-sublime.css">
 	</head>
 	<body>
 		<div class="reveal">
@@ -36,6 +37,7 @@
 							dependencies: [
 								{ src: 'https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
 					    			{ src: 'https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+								{ src: 'https://cdn.jsdelivr.net/npm/highlight.js@9.12.0/lib/index.min.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
 							]	
 						});
 					}
