--- a/stage/index.html
+++ b/stage/index.html
@@ -37,7 +37,7 @@
 							dependencies: [
 								{ src: 'https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
 					    			{ src: 'https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-								{ src: 'https://cdn.jsdelivr.net/npm/highlight.js@9.12.0/lib/index.min.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+								{ src: 'https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
 							]	
 						});
 					}
