--- a/stage/index.html
+++ b/stage/index.html
@@ -1,12 +1,30 @@
 <!doctype html>
 <html>
 	<head>
+		<title>Loading...</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/css/reveal.min.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/css/theme/white.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@9.12.0/styles/monokai-sublime.css">
+		
+		<style>
+			.reveal h1,
+			.reveal h2,
+			.reveal h3,
+			.reveal h4,
+			.reveal h5,
+			.reveal h6 {
+				margin: 0 0 20px 0;
+				color: #eee8d5;
+				font-family: 'Roboto', sans-serif;
+				line-height: 0.9em;
+				letter-spacing: 0.02em;
+				text-transform: uppercase;
+				text-shadow: none; }
+		</style>
 	</head>
 	<body>
 		<div class="reveal">
@@ -32,6 +50,7 @@
 					const url = `https://cdn.rawgit.com/mottaquikarim/JavaScriptDevelopmentRemote/8bc62aca/Lecture_${lecture}/README.md`	
 					const reveal = document.querySelector('.reveal section')
 					if (reveal) {
+						document.querySelector('title').innerHTML = `Lecture ${lecture}`
 						reveal.setAttribute('data-markdown', url);
 						Reveal.initialize({
 							dependencies: [
