--- a/stage/index.html
+++ b/stage/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Roboto:400,900" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/css/reveal.min.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/css/theme/white.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@9.12.0/styles/monokai-sublime.css">
@@ -18,7 +18,7 @@
 			.reveal h5,
 			.reveal h6 {
 				margin: 0 0 20px 0;
-				color: #eee8d5;
+				font-weight: 900;
 				font-family: 'Roboto', sans-serif;
 				line-height: 0.9em;
 				letter-spacing: 0.02em;
