--- a/stage/index.html
+++ b/stage/index.html
@@ -11,6 +11,9 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@9.12.0/styles/monokai-sublime.css">
 		
 		<style>
+			.reveal {
+  				font-family: 'Roboto', sans-serif;
+			}
 			.reveal h1,
 			.reveal h2,
 			.reveal h3,
