--- a/stage/index.html
+++ b/stage/index.html
@@ -32,7 +32,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-markdown="" data-separator="^---"></section>
+				<section data-markdown="" data-separator="^---" data-separator-vertical="^|||"></section>
 			</div>
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/lib/js/head.min.js"></script>
