--- a/stage/index.html
+++ b/stage/index.html
@@ -4,7 +4,8 @@
 		<title>Loading...</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+		
+		<link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/mottaquikarim/JavaScriptDevelopmentRemote/master/assets/ga_ico.ico" />
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,900" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/css/reveal.min.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@3.6.0/css/theme/white.css">
